# tfc-clean-workspace

./: .gitignore  Cargo.toml  settings.toml.example
.github/workflows/: ci.yml  release.yml
src/: error.rs  filter.rs  main.rs  parse.rs  repo.rs  report.rs  settings.rs  variable.rs  workspace.rs
