[package]
name = "tfc-clean-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "clean-workspace"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
clap = { version = "3.1.18", features = ["derive"] }
config = "0.13.1"
env_logger = "0.9.0"
git2 = "0.14.4"
git2_credentials = "0.8.0"
hcl-rs = "0.3.3"
http-cache-surf = "0.4.6"
log = "0.4.17"
miette = { version = "4.7.1", features = ["fancy"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
surf = "2.3.2"
surf-governor = "0.1.0"
thiserror = "1.0.31"
url = "2.2.2"
walkdir = "2.3.2"
